// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArchiveReader deflate.zip (forEach) 1`] = `
Array [
  Object {
    "data": "",
    "encrypted": false,
    "filetype": "Directory",
    "pathname": "example/",
    "size": 0,
  },
  Object {
    "data": "# example

\`\`\`
archives/example
archives/example/README.md
archives/example/dir
archives/example/dir/symlink
archives/example/dir/image.png
\`\`\`
",
    "encrypted": false,
    "filetype": "File",
    "pathname": "example/README.md",
    "size": 144,
  },
  Object {
    "data": "",
    "encrypted": false,
    "filetype": "Directory",
    "pathname": "example/dir/",
    "size": 0,
  },
  Object {
    "data": "",
    "encrypted": false,
    "filetype": "File",
    "pathname": "example/dir/symlink",
    "size": 144,
  },
  Object {
    "data": "",
    "encrypted": false,
    "filetype": "File",
    "pathname": "example/dir/image.png",
    "size": 1559,
  },
]
`;

exports[`ArchiveReader deflate.zip 1`] = `
Array [
  Object {
    "data": "",
    "encrypted": false,
    "filetype": "Directory",
    "pathname": "example/",
    "size": 0,
  },
  Object {
    "data": "# example

\`\`\`
archives/example
archives/example/README.md
archives/example/dir
archives/example/dir/symlink
archives/example/dir/image.png
\`\`\`
",
    "encrypted": false,
    "filetype": "File",
    "pathname": "example/README.md",
    "size": 144,
  },
  Object {
    "data": "",
    "encrypted": false,
    "filetype": "Directory",
    "pathname": "example/dir/",
    "size": 0,
  },
  Object {
    "data": "",
    "encrypted": false,
    "filetype": "File",
    "pathname": "example/dir/symlink",
    "size": 144,
  },
  Object {
    "data": "",
    "encrypted": false,
    "filetype": "File",
    "pathname": "example/dir/image.png",
    "size": 1559,
  },
]
`;

exports[`ArchiveReader deflate-encrypted.zip 1`] = `
Array [
  Object {
    "data": "",
    "encrypted": false,
    "filetype": "Directory",
    "pathname": "example/",
    "size": 0,
  },
  Object {
    "data": "# example

\`\`\`
archives/example
archives/example/README.md
archives/example/dir
archives/example/dir/symlink
archives/example/dir/image.png
\`\`\`
",
    "encrypted": true,
    "filetype": "File",
    "pathname": "example/README.md",
    "size": 144,
  },
  Object {
    "data": "",
    "encrypted": false,
    "filetype": "Directory",
    "pathname": "example/dir/",
    "size": 0,
  },
  Object {
    "data": "",
    "encrypted": true,
    "filetype": "File",
    "pathname": "example/dir/symlink",
    "size": 144,
  },
  Object {
    "data": "",
    "encrypted": true,
    "filetype": "File",
    "pathname": "example/dir/image.png",
    "size": 1559,
  },
]
`;
